--- a/style.css
+++ b/style.css
@@ -19,9 +19,16 @@ h1 {
     max-width: 80vw;
     min-height: 50svh;
     display: grid;
-    grid-template-columns: repeat(4, minmax(100px, 1fr));
+    grid-template-columns: repeat(4, minmax(50px, 1fr));
     grid-auto-rows: 1fr;
-    gap: 0.7rem;
+    grid-template-areas:
+        "one one one four"
+        "two three three aside"
+        "six three three aside"
+        "seven seven eight aside";
+    gap: .7rem;
+    /* grid-auto-flow: row; */
+
 }
 
 
@@ -36,41 +43,52 @@ h1 {
 
 .one {
     background-color: red;
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-area: one;
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
 }
 
 .two {
     background-color: purple;
-    grid-column: 3 / 5
+    grid-area: two;
+    /* grid-column: 3 / 5 */
 }
 
 .three {
     background-color: yellow;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    grid-area: three;
+    /* grid-row-start: 2;
+    grid-row-end: 4; */
 }
 
 .four {
 
     background-color: blue;
-    grid-column: 4 / 5;
+    grid-area: four;
+    /* grid-column: 4 / 5; */
 }
 
 .five {
     background-color: salmon;
+    grid-area: aside;
+    /* grid-column: 2 / 4; */
 }
 
 .six {
     background-color: chocolate;
+    grid-area: six;
 }
 
 .seven {
     background-color: aqua;
+    /* grid-column: 1 / 5;
+    grid-row: 4 / 6; */
+    grid-area: seven;
 }
 
 .eight {
     background-color: darkgreen;
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
+    /* grid-column: 2 / 4;
+    grid-row: 2 / 3; */
+    grid-area: eight;
 }
